こみっとし祭

--- a/parallel-translation.yml
+++ b/parallel-translation.yml
@@ -1,2 +1,2 @@
-"§b翻訳を有効化しました！": "§bTranslation enabled!"
-"§b翻訳を無効化しました！": "§bTranslation disabled!"
+"翻訳を有効化しました！": "Translation enabled!"
+"翻訳を無効化しました！": "Translation disabled!"
